added the my class and few work pending on it

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 .drawer-side a.active {
-    color: white;
+    color: rgb(77, 177, 5);
+    font-weight: bold;
 }
 .drawer-side a {
     background-color: transparent;
