added the my enrolled component and going to deploy to the firebse

--- a/src/Components/Login/LogIn.css
+++ b/src/Components/Login/LogIn.css
@@ -7,7 +7,7 @@
   user-select: none;
 }
 .bg-img {
-  background: url("/public/login-cover-1251299.jpeg");
+  background: url("/login-cover-1251299.jpeg");
   height: 100vh;
   background-size: cover;
   background-position: center;
